<resources>
    <string name="app_name">Twit Tok</string>
    <string name="nav_menu_item_followed">Followed</string>
    <string name="nav_menu_item_newtwok">New Twok</string>
    <string name="nav_menu_item_home">Home</string>
    <string name="nav_menu_item_profile">Your Profile</string>
    <string name="nav_menu_item_map">Twok\'s position</string>
    <string name="view_placeholder_profile_name">Username</string>
    <string name="view_placeholder_profile_image">Profile image</string>
    <string name="view_placeholder_twok">Here the twok text</string>
    <string name="view_placeholder_twok_create">Tap here to write your twok</string>
    <string name="button_follow_text">Follow</string>
    <string name="button_unfollow_text">Unfollow</string>
    <string name="view_placeholder_no_followed">To see your friends list you have to follow someone</string>
    <string name="button_position_text">Show Position</string>
</resources>